{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 20,
  "lineage": "3684915f-d688-a734-9fa0-f2ff4f0d2ddf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hub_to_spoke1_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d28b5eba7e8869c23322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d28b5eba7e8869c2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09f5984ff2a85b612"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.hub_rt",
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke1_vpc",
            "aws_vpc_peering_connection.hub_to_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hub_to_spoke2_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d28b5eba7e8869c21218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d28b5eba7e8869c2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0a8520fbf4bf25d05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.hub_rt",
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke2_vpc",
            "aws_vpc_peering_connection.hub_to_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "spoke1_to_hub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e217992c9a952899179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e217992c9a952899",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09f5984ff2a85b612"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.spoke1_rt",
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke1_vpc",
            "aws_vpc_peering_connection.hub_to_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "spoke2_to_hub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bbe931e5ce81a064179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbe931e5ce81a064",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0a8520fbf4bf25d05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.spoke2_rt",
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke2_vpc",
            "aws_vpc_peering_connection.hub_to_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:route-table/rtb-0d28b5eba7e8869c2",
            "id": "rtb-0d28b5eba7e8869c2",
            "owner_id": "777776214151",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c61867aa65bcda31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:route-table/rtb-0e217992c9a952899",
            "id": "rtb-0e217992c9a952899",
            "owner_id": "777776214151",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0fc60bf30d47398"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.spoke1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:route-table/rtb-0bbe931e5ce81a064",
            "id": "rtb-0bbe931e5ce81a064",
            "owner_id": "777776214151",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0505218f0adb30c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.spoke2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hub_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07874bd3bdbd1e9c9",
            "route_table_id": "rtb-0d28b5eba7e8869c2",
            "subnet_id": "subnet-0ca4a40c3c17cefa7"
          },
          "dependencies": [
            "aws_route_table.hub_rt",
            "aws_subnet.hub_subnet",
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke1_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9791365e2a73690",
            "route_table_id": "rtb-0e217992c9a952899",
            "subnet_id": "subnet-0e99fd5c619343f67"
          },
          "dependencies": [
            "aws_route_table.spoke1_rt",
            "aws_subnet.spoke1_subnet",
            "aws_vpc.spoke1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke2_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c30a48919ad0fce",
            "route_table_id": "rtb-0bbe931e5ce81a064",
            "subnet_id": "subnet-0ac953b454d7c66bf"
          },
          "dependencies": [
            "aws_route_table.spoke2_rt",
            "aws_subnet.spoke2_subnet",
            "aws_vpc.spoke2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:security-group/sg-0e806b9cdf3830e0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e806b9cdf3830e0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16",
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Hub Security Group",
            "name_prefix": "",
            "owner_id": "777776214151",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c61867aa65bcda31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:subnet/subnet-0ca4a40c3c17cefa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca4a40c3c17cefa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "777776214151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Hub Subnet"
            },
            "tags_all": {
              "Name": "Hub Subnet"
            },
            "vpc_id": "vpc-0c61867aa65bcda31"
          },
          "dependencies": [
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:subnet/subnet-0e99fd5c619343f67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e99fd5c619343f67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "777776214151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Spoke1 Subnet"
            },
            "tags_all": {
              "Name": "Spoke1 Subnet"
            },
            "vpc_id": "vpc-0e0fc60bf30d47398"
          },
          "dependencies": [
            "aws_vpc.spoke1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:subnet/subnet-0ac953b454d7c66bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac953b454d7c66bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "777776214151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Spoke2 Subnet"
            },
            "tags_all": {
              "Name": "Spoke2 Subnet"
            },
            "vpc_id": "vpc-0e0505218f0adb30c"
          },
          "dependencies": [
            "aws_vpc.spoke2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:vpc/vpc-0c61867aa65bcda31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e90d2903d7ce202d",
            "default_route_table_id": "rtb-0ed847aca0a84d9f9",
            "default_security_group_id": "sg-05231ee494e85434d",
            "dhcp_options_id": "dopt-095daaf063e42b5e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c61867aa65bcda31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed847aca0a84d9f9",
            "owner_id": "777776214151",
            "tags": {
              "Name": "Hub VPC"
            },
            "tags_all": {
              "Name": "Hub VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:vpc/vpc-0e0fc60bf30d47398",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0772e63649b9c14e7",
            "default_route_table_id": "rtb-0ce5c570adfcbbc5c",
            "default_security_group_id": "sg-0556c53c5f7fb4fdc",
            "dhcp_options_id": "dopt-095daaf063e42b5e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0fc60bf30d47398",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce5c570adfcbbc5c",
            "owner_id": "777776214151",
            "tags": {
              "Name": "Spoke1 VPC"
            },
            "tags_all": {
              "Name": "Spoke1 VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:vpc/vpc-0e0505218f0adb30c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-05d8ea27a92e828d9",
            "default_route_table_id": "rtb-0dda771b25dcc2040",
            "default_security_group_id": "sg-074d82276a429ba1f",
            "dhcp_options_id": "dopt-095daaf063e42b5e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0505218f0adb30c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dda771b25dcc2040",
            "owner_id": "777776214151",
            "tags": {
              "Name": "Spoke2 VPC"
            },
            "tags_all": {
              "Name": "Spoke2 VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777776214151:vpc-endpoint/vpce-02113e40760a47c30",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "dns_entry": [
              {
                "dns_name": "*.vpce-02113e40760a47c30-a8q27co6.s3.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "*.vpce-02113e40760a47c30-a8q27co6-ap-south-1a.s3.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02113e40760a47c30",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-023e4aa22c155d41a"
            ],
            "owner_id": "777776214151",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e806b9cdf3830e0d"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.9",
                "subnet_id": "subnet-0ca4a40c3c17cefa7"
              }
            ],
            "subnet_ids": [
              "subnet-0ca4a40c3c17cefa7"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c61867aa65bcda31"
          },
          "dependencies": [
            "aws_security_group.hub_sg",
            "aws_subnet.hub_subnet",
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "hub_to_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-09f5984ff2a85b612",
            "peer_owner_id": "777776214151",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0e0fc60bf30d47398",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Hub-to-Spoke1 Peering"
            },
            "tags_all": {
              "Name": "Hub-to-Spoke1 Peering"
            },
            "vpc_id": "vpc-0c61867aa65bcda31"
          },
          "dependencies": [
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "hub_to_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0a8520fbf4bf25d05",
            "peer_owner_id": "777776214151",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0e0505218f0adb30c",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Hub-to-Spoke2 Peering"
            },
            "tags_all": {
              "Name": "Hub-to-Spoke2 Peering"
            },
            "vpc_id": "vpc-0c61867aa65bcda31"
          },
          "dependencies": [
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke2_vpc"
          ]
        }
      ]
    }
  ]
}